...
private fun MainAppTopBar(selectedTab: MainTab) {
            TopAppBar(
                title = {
                    Text(
                text = when (selectedTab) {
                    MainTab.JOB_APPLICATIONS -> "Job Applications"
                    MainTab.DISCUSSIONS -> "Discussions"
                    MainTab.PROFILE -> "Profile"
                },
                        style = MaterialTheme.typography.titleLarge.copy(
                            fontWeight = FontWeight.Bold,
                            color = colorResource(R.color.text_primary)
                        )
...
